<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.boaltatp1.viewmodel.AdvertisementItemViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.AdvertisementDetailFragment">

            <TextView
                android:id="@+id/tvTitleLabel"
                style="@style/LabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".9" />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="#5E5959"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleLabel"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.title}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1"
                app:layout_constraintVertical_bias=".1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

            <TextView
                android:id="@+id/tvPriceLabel"
                style="@style/LabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                app:layout_constraintEnd_toEndOf="@id/tvTitleLabel"
                app:layout_constraintStart_toStartOf="@id/tvTitleLabel"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="#5E5959"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.price}"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/line2" />

            <TextView
                android:id="@+id/tvBodyLabel"
                style="@style/LabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                app:layout_constraintEnd_toEndOf="@id/tvTitleLabel"
                app:layout_constraintStart_toStartOf="@id/tvTitleLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPrice" />

            <View
                android:id="@+id/line3"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="#5E5959"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBodyLabel"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />


            <TextView
                android:id="@+id/tvBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.body}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvBodyLabel" />

            <!-- TODO list of images horizontal list -->
            <!-- TODO video-->
            <!-- TODO show cellphone -->
            <!--<TextView-->
            <!--android:id="@+id/tvContactUsLabel"-->
            <!--style="@style/LabelStyle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="@string/label_contact_us"-->
            <!--app:layout_constraintEnd_toEndOf="@id/tvTitle"-->
            <!--app:layout_constraintHorizontal_bias="0.1"-->
            <!--app:layout_constraintStart_toStartOf="@id/tvTitle"-->
            <!--app:layout_constraintTop_toBottomOf="@id/tvBody" />-->

            <!--<View-->
            <!--android:id="@+id/line4"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="2dp"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:background="#5E5959"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/tvContactUsLabel"-->
            <!--app:layout_constraintWidth_default="percent"-->
            <!--app:layout_constraintWidth_percent="0.9" />-->


            <!--<TextView-->
            <!--android:id="@+id/tvPhoneNumber"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="@{viewModel.phoneNumber}"-->
            <!--app:layout_constraintEnd_toEndOf="@id/tvTitle"-->
            <!--app:layout_constraintHorizontal_bias="0.1"-->
            <!--app:layout_constraintStart_toStartOf="@id/tvTitle"-->
            <!--app:layout_constraintTop_toBottomOf="@id/tvContactUsLabel" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>